fix: scroll bar finsh fix:TabNav 頁籤固定 |fix: mobile 頁籤 不換行flex-nowrap |fix:mobile =>目前進度: 圖片部分改 div col-auto or objectfit:cover , background-size:cover , background-position: center

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -81,6 +81,14 @@
   border-bottom: 5px solid var(--my-primary);
 }
 
+.overflow-style {
+  position: sticky!important;
+  height: calc(100vh - 58px);
+  overflow: auto!important;
+  top: 85px;
+  }
+
+
 // .ls-1{
 //   letter-spacing: 1.5px;
 // }
