--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -45,6 +45,7 @@ $pink:    #d63384 !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
+$yellow-p: #FFDF65!default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
@@ -1142,9 +1143,11 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w
 // Tooltips
 
 // scss-docs-start tooltip-variables
-$tooltip-font-size:                 $font-size-sm !default;
+//$tooltip-font-size:                 $font-size-sm !default;
+$tooltip-font-size:                  50px !default;
 $tooltip-max-width:                 200px !default;
-$tooltip-color:                     $white !default;
+//$tooltip-color:                     $white !default;
+$tooltip-color:                     $yellow-p!default;
 $tooltip-bg:                        $black !default;
 $tooltip-border-radius:             $border-radius !default;
 $tooltip-opacity:                   .9 !default;
